compiler.old/tests/compiler/must_fail/t_08.rs
fn foo(x: stack! (b64), x: stack! (b64)) {
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
